--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="white">#ffffff</color>
+    <color name="white_transparent">#A8FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="yellow">#ffff00</color>
+
+    <color name="color_primary">#22272e</color>
+    <color name="color_primary_day">#ffffff</color>
+    <color name="card_color">#2d333b</color>
+    <color name="card_color_day">#ffffff</color>
 </resources>
